Fix menu icon that caused scrollbar to appear when in menu is only one element

--- a/src/styles/components/ui/ASelect.scss
+++ b/src/styles/components/ui/ASelect.scss
@@ -146,7 +146,7 @@
   background-color: inherit;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-55%);
   left: 5px;
   > .a_icon {
     vertical-align: inherit;
